--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>15パズル</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
     <h1>15パズル</h1>
-    <div id="puzzle-container"></div>
-    <p id="message"></p>
-    <button id="shuffle-button">シャッフル & スタート</button>
-    <script type="module" src="index.js"></script>
+
+    <!-- 猫の写真 -->
+    <div style="text-align: center; margin-bottom: 10px;">
+        <img src="cat.jpg" alt="猫の写真" style="max-width: 300px; border-radius: 12px;">
+    </div>
+
+    <div id="game-container">
+        <div id="puzzle-board"></div>
+        <div id="controls">
+            <div id="stats">
+                <p>Moves: <span id="move-count">0</span></p>
+                <p>Time: <span id="time-elapsed">0</span>s</p>
+            </div>
+            <div id="buttons">
+                <button id="restart-button">Restart</button>
+                <button id="shuffle-button">New Game</button>
+            </div>
+        </div>
+        <p id="win-message" class="hidden">You Win!</p>
+    </div>
+    <script src="index.js"></script>
 </body>
-</html>
