--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <body>
     <h1>15パズル</h1>
 
-    <!-- 猫の写真 -->
+    <!-- 🐱 猫の画像を追加 -->
     <div style="text-align: center; margin-bottom: 10px;">
-        <img src="cat.jpg" alt="猫の写真" style="max-width: 300px; border-radius: 12px;">
+        <img src="cute_cat_illust_3737.png" alt="猫のイラスト"
+             style="width: 150px; border-radius: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
     </div>
 
+    <!-- ゲームコンテナ -->
     <div id="game-container">
         <div id="puzzle-board"></div>
         <div id="controls">
@@ -15,10 +17,11 @@
             </div>
             <div id="buttons">
                 <button id="restart-button">Restart</button>
-                <button id="shuffle-button">New Game</button>
+                <button id="shuffle-button">シャッフル＆スタート</button>
             </div>
         </div>
         <p id="win-message" class="hidden">You Win!</p>
     </div>
+
     <script src="index.js"></script>
 </body>
